--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -23,9 +23,9 @@ button,
 
 ul li {
   list-style: none;
-}
+} */
 
-@keyframes card-animation {
+/* @keyframes card-animation {
   0% {
     height: 0;
     opacity: 0;
@@ -34,7 +34,7 @@ ul li {
     height: auto;
     opacity: 1;
   }
-}
+} */
 html,
 body {
   width: 100%;
@@ -52,10 +52,10 @@ body {
 }
 
 .container {
-  max-width: 1260px;
+  /* max-width: 1260px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 0 30px; */
 }
 
 ._hover01:hover {
@@ -71,11 +71,11 @@ body {
 }
 
 ._hover03:hover {
-  background-color: #33399b;
-  color: #FFFFFF;
+  /* background-color: #33399b;
+  color: #FFFFFF; */
 }
 ._hover03:hover a {
-  color: #FFFFFF;
+  /* color: #FFFFFF; */
 }
 
 .pop-user-set:target,
@@ -213,33 +213,33 @@ body {
 }
 
 .pop-user-set__name {
-  color: #000;
+  /* color: #000;
   font-size: 14px;
   font-weight: 500;
   line-height: 21px;
   letter-spacing: -0.14px;
-  margin-bottom: 4px;
+  margin-bottom: 4px; */
 }
 .pop-user-set__mail {
-  color: #94A6BE;
+  /* color: #94A6BE;
   font-size: 14px;
   line-height: 21px;
   letter-spacing: -0.14px;
-  margin-bottom: 10px;
+  margin-bottom: 10px; */
 }
 .pop-user-set__theme {
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 30px; */
 }
-.pop-user-set__theme p {
+/* .pop-user-set__theme p {
   color: #000;
   font-size: 14px;
   line-height: 21px;
   letter-spacing: -0.14px;
-}
-.pop-user-set__theme input[type=checkbox] {
+} */
+/* .pop-user-set__theme input[type=checkbox] {
   position: relative;
   width: 24px;
   height: 13px;
@@ -249,8 +249,8 @@ body {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-}
-.pop-user-set__theme input[type=checkbox]::before {
+} */
+/* .pop-user-set__theme input[type=checkbox]::before {
   content: "";
   position: absolute;
   top: 1px;
@@ -263,17 +263,17 @@ body {
 }
 .pop-user-set__theme input:checked[type=checkbox]::before {
   left: 12px;
-}
+} */
 .pop-user-set button {
-  width: 72px;
+  /* width: 72px;
   height: 30px;
   background: transparent;
   color: #565EEF;
   border-radius: 4px;
-  border: 1px solid #565EEF;
+  border: 1px solid #565EEF; */
 }
 .pop-user-set button a {
-  color: #565EEF;
+  /* color: #565EEF; */
 }
 
 .pop-new-card {
@@ -713,32 +713,12 @@ body {
   display: none;
 }
 
-.header {
-  width: 100%;
-  margin: 0 auto;
-  background-color: #FFFFFF;
-}
-.header__block {
-  height: 70px;
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-  top: 0;
-  left: 0;
-  padding: 0 10px;
-}
+
 .header__logo img {
   width: 85px;
 }
-.header__nav {
-  max-width: 290px;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
+
 .header__btn-main-new {
   width: 178px;
   height: 30px;
@@ -777,7 +757,7 @@ body {
   padding: 0;
 }
 .header__pop-user-set {
-  display: block;
+  /* display: block;
   position: absolute;
   top: 61px;
   right: 0;
@@ -789,71 +769,25 @@ body {
   box-shadow: 0px 10px 39px 0px rgba(26, 56, 101, 0.21);
   padding: 34px;
   text-align: center;
-  z-index: 2;
+  z-index: 2; */
 }
 
 .main {
-  width: 100%;
-  background-color: #EAEEF6;
+  /* width: 100%;
+  background-color: #EAEEF6; */
 }
 .main__block {
-  width: 100%;
+  /* width: 100%;
   margin: 0 auto;
-  padding: 25px 0 49px;
+  padding: 25px 0 49px; */
 }
 .main__content {
-  width: 100%;
-  display: flex;
-}
-.main__column {
-  width: 20%;
-  margin: 0 auto;
-  display: block;
+  /* width: 100%;
+  display: flex; */
 }
 
-.column__title {
-  padding: 0 10px;
-  margin: 15px 0;
-}
-.column__title p {
-  color: #94A6BE;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 1;
-  text-transform: uppercase;
-}
 
-.cards {
-  width: 100%;
-  display: block;
-  position: relative;
-}
-.cards__item {
-  padding: 5px;
-  animation-name: card-animation;
-  animation-duration: 500ms;
-  animation-timing-function: linear;
-}
-.cards__card {
-  width: 220px;
-  height: 130px;
-  background-color: #FFFFFF;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: stretch;
-  padding: 15px 13px 19px;
-}
 
-.card__group {
-  width: 100%;
-  height: 20px;
-  margin-bottom: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
 .card__theme {
   width: auto;
   height: 20px;
@@ -864,226 +798,4 @@ body {
   font-size: 10px;
   font-weight: 600;
   line-height: 10px;
-}
-.card__btn {
-  width: 24px;
-  height: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 2px;
-}
-.card__btn div {
-  width: 4px;
-  height: 4px;
-  border-radius: 50%;
-  background-color: #94A6BE;
-}
-.card__title {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 18px;
-  color: #000000;
-  margin-bottom: 10px;
-}
-.card__content {
-  height: 64px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-.card__date {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-.card__date svg {
-  width: 13px;
-}
-.card__date p {
-  margin-left: 6px;
-  font-size: 10px;
-  line-height: 13px;
-  color: #94A6BE;
-  letter-spacing: 0.2px;
-}
-
-@media screen and (max-width: 1200px) {
-  .main__block {
-    width: 100%;
-    margin: 0 auto;
-    padding: 40px 0 64px;
-  }
-  .main__content {
-    display: block;
-  }
-  .main__column {
-    width: 100%;
-    margin: 0 auto;
-    display: block;
-  }
-  .cards {
-    width: 100%;
-    display: flex;
-    overflow-y: auto;
-  }
-  .cards__card {
-    width: 220px;
-    height: 130px;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: stretch;
-    padding: 15px 13px 19px;
-  }
-}
-@media screen and (max-width: 660px) {
-  .pop-new-card {
-    top: 70px;
-  }
-  .pop-new-card__container {
-    padding: 0;
-    justify-content: flex-start;
-  }
-  .pop-new-card__block {
-    border-radius: 0;
-  }
-  .pop-new-card__wrap {
-    display: block;
-  }
-  .calendar {
-    max-width: 340px;
-    width: 100%;
-  }
-  .calendar__ttl, .calendar__nav, .calendar__period {
-    padding: 0;
-  }
-  .calendar .date-create {
-    display: none;
-    margin-bottom: 7px;
-  }
-  .calendar__p {
-    font-size: 14px;
-  }
-  .calendar__day-name {
-    font-size: 14px;
-  }
-  .calendar__cells {
-    width: 344px;
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  .calendar__cell {
-    width: 42px;
-    height: 42px;
-    font-size: 14px;
-  }
-  .pop-browse {
-    top: 70px;
-  }
-  .pop-browse__container {
-    padding: 0;
-    justify-content: flex-start;
-  }
-  .pop-browse__block {
-    border-radius: 0;
-  }
-  .pop-browse__wrap {
-    display: block;
-  }
-}
-@media screen and (max-width: 495px) {
-  .container {
-    width: 100%;
-    padding: 0 16px;
-  }
-  .header__btn-main-new {
-    z-index: 3;
-    position: fixed;
-    left: 16px;
-    bottom: 30px;
-    top: auto;
-    width: calc(100vw - 32px);
-    height: 40px;
-    border-radius: 4px;
-    margin-right: 0;
-  }
-  .pop-new-card__container {
-    padding: 0;
-    justify-content: flex-start;
-  }
-  .pop-new-card__block {
-    padding: 20px 16px 32px;
-  }
-  .pop-new-card__form {
-    max-width: 100%;
-    width: 100%;
-    display: block;
-  }
-  .pop-new-card__calendar {
-    width: 100%;
-  }
-  .form-new__area {
-    max-width: 100%;
-    height: 34px;
-  }
-  .form-new__create {
-    width: 100%;
-    height: 40px;
-  }
-  .pop-browse__block {
-    padding: 20px 16px 32px;
-  }
-  .pop-browse__content .theme-down {
-    display: block;
-    margin-bottom: 20px;
-  }
-  .pop-browse__content .theme-top {
-    display: none;
-  }
-  .pop-browse__form {
-    max-width: 100%;
-  }
-  .pop-browse__calendar {
-    width: 100%;
-  }
-  .pop-browse__btn-browse button, .pop-browse__btn-edit button {
-    width: 100%;
-    height: 40px;
-  }
-  .pop-browse__btn-browse .btn-group, .pop-browse__btn-edit .btn-group {
-    width: 100%;
-  }
-  .pop-browse__btn-browse .btn-group button, .pop-browse__btn-edit .btn-group button {
-    margin-right: 0px;
-  }
-  .form-browse__area {
-    max-width: 100%;
-  }
-  .form-browse__area {
-    height: 37px;
-  }
-}
-@media only screen and (max-width: 375px) {
-  .pop-exit__block {
-    padding: 50px 20px;
-  }
-  .pop-exit__exit-yes {
-    width: 100%;
-    height: 40px;
-    margin-right: 0;
-    margin-bottom: 10px;
-  }
-  .pop-exit__exit-no {
-    width: 100%;
-    height: 40px;
-  }
-  .pop-exit__form-group {
-    display: block;
-  }
 }
