--- a/css/signin.css
+++ b/css/signin.css
@@ -38,36 +38,36 @@ a {
 }
 
 .wrapper {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
-  background-color: #EAEEF6;
+  background-color: #EAEEF6; */
 }
 
-.container-signin {
+/* .container-signin {
   display: block;
   width: 100vw;
   min-height: 100vh;
   margin: 0 auto;
-}
+} */
 
 ._hover01:hover {
-  background-color: #33399b;
+  /* background-color: #33399b; */
 }
 
 .modal {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   min-width: 320px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 .modal__block {
-  display: block;
+  /* display: block;
   margin: 0 auto;
   background-color: #FFFFFF;
   max-width: 368px;
@@ -75,25 +75,25 @@ a {
   padding: 50px 60px;
   border-radius: 10px;
   border: 0.7px solid #D4DBE5;
-  box-shadow: 0px 4px 67px -12px rgba(0, 0, 0, 0.13);
+  box-shadow: 0px 4px 67px -12px rgba(0, 0, 0, 0.13); */
 }
 .modal__ttl h2 {
-  text-align: center;
+  /* text-align: center;
   font-size: 20px;
   font-weight: 700;
   line-height: 30px;
   letter-spacing: -0.6px;
-  margin-bottom: 20px;
+  margin-bottom: 20px; */
 }
 .modal__form-login {
-  width: 100%;
+  /* width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 .modal__form-login input:first-child {
-  margin-bottom: 7px;
+  /* margin-bottom: 7px; */
 }
 .modal__input {
   width: 100%;
@@ -120,7 +120,7 @@ a {
   color: #94A6BE;
 }
 .modal__btn-enter {
-  width: 100%;
+  /* width: 100%;
   height: 30px;
   background-color: #565EEF;
   border-radius: 4px;
@@ -135,29 +135,29 @@ a {
   line-height: 21px;
   font-weight: 500;
   letter-spacing: -0.14px;
-  color: #FFFFFF;
+  color: #FFFFFF; */
 }
 .modal__btn-enter a {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   color: #FFFFFF;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 .modal__form-group {
-  text-align: center;
+  /* text-align: center; */
 }
 .modal__form-group p,
 .modal__form-group a {
-  color: rgba(148, 166, 190, 0.4);
+  /* color: rgba(148, 166, 190, 0.4);
   font-size: 14px;
   font-weight: 400;
   line-height: 150%;
-  letter-spacing: -0.14px;
+  letter-spacing: -0.14px; */
 }
 .modal__form-group a {
-  text-decoration: underline;
+  /* text-decoration: underline; */
 }
 
 @media screen and (max-width: 375px) {
