--- a/src/App.css
+++ b/src/App.css
@@ -44,11 +44,11 @@ body {
 }
 
 .wrapper {
-  max-width: 100%;
+  /* max-width: 100%;
   width: 100vw;
   min-height: 100vh;
   overflow: hidden;
-  background-color: #F1F1F1;
+  background-color: #F1F1F1; */
 }
 
 .container {
@@ -116,7 +116,7 @@ body {
 }
 
 .pop-exit {
-  display: none;
+  /* display: none;
   width: 100%;
   height: 100%;
   min-width: 320px;
@@ -124,10 +124,10 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 5;
+  z-index: 5; */
 }
 .pop-exit__container {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   min-height: 100vh;
   padding: 0 16px;
@@ -135,7 +135,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.4); */
 }
 .pop-exit__block {
   display: block;
@@ -540,7 +540,7 @@ body {
 }
 
 .pop-browse {
-  display: none;
+  display: block;
   width: 100%;
   height: 100%;
   min-width: 375px;
