--- a/css/signup.css
+++ b/css/signup.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -22,7 +22,7 @@ button,
 
 ul li {
   list-style: none;
-}
+} */
 
 html,
 body {
