--- a/src/App.css
+++ b/src/App.css
@@ -71,8 +71,8 @@ body {
 }
 
 ._hover03:hover {
-  /* background-color: #33399b;
-  color: #FFFFFF; */
+  background-color: #33399b;
+  color: #FFFFFF;
 }
 ._hover03:hover a {
   /* color: #FFFFFF; */
@@ -138,7 +138,7 @@ body {
   background: rgba(0, 0, 0, 0.4); */
 }
 .pop-exit__block {
-  display: block;
+  /* display: block;
   margin: 0 auto;
   background-color: #FFFFFF;
   max-width: 370px;
@@ -146,18 +146,18 @@ body {
   padding: 50px 60px;
   border-radius: 10px;
   border: 0.7px solid #D4DBE5;
-  box-shadow: 0px 4px 67px -12px rgba(0, 0, 0, 0.13);
+  box-shadow: 0px 4px 67px -12px rgba(0, 0, 0, 0.13); */
 }
 .pop-exit__ttl h2 {
-  text-align: center;
+  /* text-align: center;
   font-size: 20px;
   font-weight: 700;
   line-height: 30px;
   letter-spacing: -0.4px;
-  margin-bottom: 20px;
+  margin-bottom: 20px; */
 }
 .pop-exit__exit-yes {
-  width: 153px;
+  /* width: 153px;
   height: 30px;
   background-color: #565EEF;
   border-radius: 4px;
@@ -171,18 +171,18 @@ body {
   font-weight: 500;
   letter-spacing: -0.14px;
   color: #FFFFFF;
-  margin-right: 10px;
+  margin-right: 10px; */
 }
 .pop-exit__exit-yes a {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   color: #FFFFFF;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 .pop-exit__exit-no {
-  width: 153px;
+  /* width: 153px;
   height: 30px;
   background-color: transparent;
   border-radius: 4px;
@@ -195,21 +195,21 @@ body {
   line-height: 21px;
   font-weight: 500;
   letter-spacing: -0.14px;
-  color: #FFFFFF;
+  color: #FFFFFF; */
 }
 .pop-exit__exit-no a {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   color: #565EEF;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 .pop-exit__form-group {
-  width: 100%;
+  /* width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
 
 .pop-user-set__name {
