--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ body {
 }
 
 ._hover01:hover {
-  background-color: #33399b;
+  /* background-color: #33399b; */
 }
 
 ._hover02:hover, .header__user:hover {
@@ -277,7 +277,7 @@ body {
 }
 
 .pop-new-card {
-  display: none;
+  /* display: none;
   width: 100%;
   min-width: 375px;
   height: 100%;
@@ -285,10 +285,10 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 6;
+  z-index: 6; */
 }
 .pop-new-card__container {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   min-height: 100vh;
   padding: 0 16px;
@@ -296,10 +296,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.4); */
 }
 .pop-new-card__block {
-  display: block;
+  /* display: block;
   margin: 0 auto;
   background-color: #FFFFFF;
   max-width: 630px;
@@ -307,45 +307,45 @@ body {
   padding: 40px 30px 48px;
   border-radius: 10px;
   border: 0.7px solid #D4DBE5;
-  position: relative;
+  position: relative; */
 }
 .pop-new-card__content {
-  display: block;
-  text-align: left;
+  /* display: block;
+  text-align: left; */
 }
-.pop-new-card__ttl {
+/* .pop-new-card__ttl {
   color: #000;
   font-size: 20px;
   font-weight: 600;
   line-height: 24px;
   margin-bottom: 20px;
-}
+} */
 .pop-new-card__close {
-  position: absolute;
+  /* position: absolute;
   top: 20px;
   right: 30px;
   color: #94A6BE;
-  cursor: pointer;
+  cursor: pointer; */
 }
-.pop-new-card__close:hover {
+/* .pop-new-card__close:hover {
   color: #000000;
-}
+} */
 .pop-new-card__wrap {
-  display: flex;
+  /* display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
 .pop-new-card__form {
-  max-width: 370px;
+  /* max-width: 370px;
   width: 100%;
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 20px; */
 }
 
-.form-new__block {
+/* .form-new__block {
   display: flex;
   flex-direction: column;
-}
+} */
 .form-new__input, .form-new__area {
   width: 100%;
   outline: none;
@@ -380,7 +380,7 @@ body {
   height: 200px;
 }
 .form-new__create {
-  width: 132px;
+  /* width: 132px;
   height: 30px;
   background-color: #565EEF;
   border-radius: 4px;
@@ -390,7 +390,7 @@ body {
   font-weight: 500;
   line-height: 1;
   color: #FFFFFF;
-  float: right;
+  float: right; */
 }
 
 .subttl {
@@ -720,7 +720,7 @@ body {
 
 
 .header__btn-main-new {
-  width: 178px;
+  /* width: 178px;
   height: 30px;
   border-radius: 4px;
   background-color: #565EEF;
@@ -729,11 +729,11 @@ body {
   font-size: 14px;
   line-height: 1;
   font-weight: 500;
-  margin-right: 20px;
+  margin-right: 20px; */
 }
-.header__btn-main-new a {
+/* .header__btn-main-new a {
   color: #FFFFFF;
-}
+} */
 .header__user {
   height: 20px;
   display: flex;
