--- a/src/App.css
+++ b/src/App.css
@@ -35,59 +35,287 @@ ul li {
     opacity: 1;
   }
 } */
-html,
+/* html,
 body {
   width: 100%;
   height: 100%;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   color: #000000;
+} */
+
+
+
+
+
+@media screen and (max-width: 1200px) {
+  /* .main__block {
+    width: 100%;
+    margin: 0 auto;
+    padding: 40px 0 64px;
+  } */
+
+  /* .main__content {
+    display: block;
+  } */
+
+  /* .main__column {
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+  } */
+  /* .cards {
+    width: 100%;
+    display: flex;
+    overflow-y: auto;
+  } */
+  /* .cards__card {
+    width: 220px;
+    height: 130px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: stretch;
+    padding: 15px 13px 19px;
+  } */
 }
 
-.wrapper {
-  /* max-width: 100%;
+@media screen and (max-width: 660px) {
+  /* .pop-new-card {
+    top: 70px;
+  } */
+
+  /* .pop-new-card__container {
+    padding: 0;
+    justify-content: flex-start;
+  } */
+
+  /* .pop-new-card__block {
+    border-radius: 0;
+  } */
+
+  /* .pop-new-card__wrap {
+    display: block;
+  } */
+
+  .calendar {
+    max-width: 340px;
+    width: 100%;
+  }
+
+  .calendar__ttl, .calendar__nav, .calendar__period {
+    padding: 0;
+  }
+
+  .calendar .date-create {
+    display: none;
+    margin-bottom: 7px;
+  }
+
+  .calendar__p {
+    font-size: 14px;
+  }
+
+  /* .calendar__day-name {
+    font-size: 14px;
+  } */
+
+  .calendar__cells {
+    width: 344px;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .calendar__cell {
+    width: 42px;
+    height: 42px;
+    font-size: 14px;
+  }
+
+  /* .pop-browse {
+    top: 70px;
+  } */
+
+  /* .pop-browse__container {
+    padding: 0;
+    justify-content: flex-start;
+  } */
+
+  /* .pop-browse__block {
+    border-radius: 0;
+  } */
+
+  /* .pop-browse__wrap {
+    display: block;
+  } */
+}
+
+@media screen and (max-width: 495px) {
+  /* .container {
+    width: 100%;
+    padding: 0 16px;
+  } */
+
+  /* .header__btn-main-new {
+    z-index: 3;
+    position: fixed;
+    left: 16px;
+    bottom: 30px;
+    top: auto;
+    width: calc(100vw - 32px);
+    height: 40px;
+    border-radius: 4px;
+    margin-right: 0;
+  } */
+
+  /* .pop-new-card__container {
+    padding: 0;
+    justify-content: flex-start;
+  } */
+
+  /* .pop-new-card__block {
+    padding: 20px 16px 32px;
+  } */
+
+  /* .pop-new-card__form {
+    max-width: 100%;
+    width: 100%;
+    display: block;
+  } */
+
+  /* .pop-new-card__calendar {
+    width: 100%;
+  } */
+
+  /* .form-new__area {
+    max-width: 100%;
+    height: 34px;
+  } */
+
+  /* .form-new__create {
+    width: 100%;
+    height: 40px;
+  } */
+
+  /* .pop-browse__block {
+    padding: 20px 16px 32px;
+  } */
+
+  .pop-browse__content .theme-down {
+    display: block;
+    /* margin-bottom: 20px; */
+  }
+
+  .pop-browse__content .theme-top {
+    display: none;
+  }
+
+  /* .pop-browse__form {
+    max-width: 100%;
+  } */
+
+  /* .pop-browse__calendar {
+    width: 100%;
+  } */
+
+  /* .pop-browse__btn-browse button, .pop-browse__btn-edit button {
+    width: 100%;
+    height: 40px;
+  } */
+
+  /* .pop-browse__btn-browse .btn-group, .pop-browse__btn-edit .btn-group {
+    width: 100%;
+  } */
+
+  /* .pop-browse__btn-browse .btn-group button, .pop-browse__btn-edit .btn-group button {
+    margin-right: 0px;
+  } */
+
+  /* .form-browse__area {
+    max-width: 100%;
+  }
+  .form-browse__area {
+    height: 37px;
+  } */
+}
+
+@media only screen and (max-width: 375px) {
+  /* .pop-exit__block {
+    padding: 50px 20px;
+  } */
+
+  /* .pop-exit__exit-yes {
+    width: 100%;
+    height: 40px;
+    margin-right: 0;
+    margin-bottom: 10px;
+  } */
+
+  /* .pop-exit__exit-no {
+    width: 100%;
+    height: 40px;
+  } */
+
+  /* .pop-exit__form-group {
+    display: block;
+  } */
+}
+
+
+
+
+
+
+/* .wrapper {
+  max-width: 100%;
   width: 100vw;
   min-height: 100vh;
   overflow: hidden;
-  background-color: #F1F1F1; */
-}
+  background-color: #F1F1F1;
+} */
 
-.container {
-  /* max-width: 1260px;
+/* .container {
+  max-width: 1260px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 30px; */
-}
+  padding: 0 30px;
+} */
 
-._hover01:hover {
-  /* background-color: #33399b; */
-}
+/* ._hover01:hover {
+  background-color: #33399b;
+} */
 
-._hover02:hover, .header__user:hover {
+/* ._hover02:hover, .header__user:hover {
   color: #33399b;
 }
 ._hover02:hover::after, .header__user:hover::after {
   border-left-color: #33399b;
   border-bottom-color: #33399b;
-}
+} */
 
 ._hover03:hover {
-  background-color: #33399b;
-  color: #FFFFFF;
+  /* background-color: #33399b;
+  color: #FFFFFF; */
 }
+
 ._hover03:hover a {
   /* color: #FFFFFF; */
 }
 
-.pop-user-set:target,
+/* .pop-user-set:target,
 .pop-exit:target,
 .pop-new-card:target,
 .pop-browse:target {
   display: block;
-}
+} */
 
-._orange {
-  background-color: #FFE4C2;
-  color: #FF6D00;
+_active-category
+/* ._orange {
+  background-color: #ffe4c2;
+  color: #ff6d00;
 }
 
 ._green {
@@ -98,12 +326,12 @@ body {
 ._purple {
   background-color: #E9D4FF;
   color: #9A48F1;
-}
+} */
 
-._gray {
+/* ._gray {
   background: #94A6BE;
   color: #FFFFFF;
-}
+} */
 
 ._active-category {
   opacity: 1 !important;
@@ -126,6 +354,7 @@ body {
   left: 0;
   z-index: 5; */
 }
+
 .pop-exit__container {
   /* width: 100%;
   height: 100%;
@@ -137,6 +366,7 @@ body {
   justify-content: center;
   background: rgba(0, 0, 0, 0.4); */
 }
+
 .pop-exit__block {
   /* display: block;
   margin: 0 auto;
@@ -148,6 +378,7 @@ body {
   border: 0.7px solid #D4DBE5;
   box-shadow: 0px 4px 67px -12px rgba(0, 0, 0, 0.13); */
 }
+
 .pop-exit__ttl h2 {
   /* text-align: center;
   font-size: 20px;
@@ -156,6 +387,7 @@ body {
   letter-spacing: -0.4px;
   margin-bottom: 20px; */
 }
+
 .pop-exit__exit-yes {
   /* width: 153px;
   height: 30px;
@@ -173,6 +405,7 @@ body {
   color: #FFFFFF;
   margin-right: 10px; */
 }
+
 .pop-exit__exit-yes a {
   /* width: 100%;
   height: 100%;
@@ -181,6 +414,7 @@ body {
   align-items: center;
   justify-content: center; */
 }
+
 .pop-exit__exit-no {
   /* width: 153px;
   height: 30px;
@@ -197,6 +431,7 @@ body {
   letter-spacing: -0.14px;
   color: #FFFFFF; */
 }
+
 .pop-exit__exit-no a {
   /* width: 100%;
   height: 100%;
@@ -205,6 +440,7 @@ body {
   align-items: center;
   justify-content: center; */
 }
+
 .pop-exit__form-group {
   /* width: 100%;
   display: flex;
@@ -220,6 +456,7 @@ body {
   letter-spacing: -0.14px;
   margin-bottom: 4px; */
 }
+
 .pop-user-set__mail {
   /* color: #94A6BE;
   font-size: 14px;
@@ -227,12 +464,14 @@ body {
   letter-spacing: -0.14px;
   margin-bottom: 10px; */
 }
+
 .pop-user-set__theme {
   /* display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 30px; */
 }
+
 /* .pop-user-set__theme p {
   color: #000;
   font-size: 14px;
@@ -272,6 +511,7 @@ body {
   border-radius: 4px;
   border: 1px solid #565EEF; */
 }
+
 .pop-user-set button a {
   /* color: #565EEF; */
 }
@@ -287,6 +527,7 @@ body {
   left: 0;
   z-index: 6; */
 }
+
 .pop-new-card__container {
   /* width: 100%;
   height: 100%;
@@ -298,6 +539,7 @@ body {
   justify-content: center;
   background: rgba(0, 0, 0, 0.4); */
 }
+
 .pop-new-card__block {
   /* display: block;
   margin: 0 auto;
@@ -309,10 +551,12 @@ body {
   border: 0.7px solid #D4DBE5;
   position: relative; */
 }
+
 .pop-new-card__content {
   /* display: block;
   text-align: left; */
 }
+
 /* .pop-new-card__ttl {
   color: #000;
   font-size: 20px;
@@ -327,6 +571,7 @@ body {
   color: #94A6BE;
   cursor: pointer; */
 }
+
 /* .pop-new-card__close:hover {
   color: #000000;
 } */
@@ -335,6 +580,7 @@ body {
   align-items: flex-start;
   justify-content: space-between; */
 }
+
 .pop-new-card__form {
   /* max-width: 370px;
   width: 100%;
@@ -347,7 +593,7 @@ body {
   flex-direction: column;
 } */
 .form-new__input, .form-new__area {
-  width: 100%;
+  /* width: 100%;
   outline: none;
   padding: 14px;
   background: transparent;
@@ -355,8 +601,9 @@ body {
   border-radius: 8px;
   font-size: 14px;
   line-height: 1;
-  letter-spacing: -0.14px;
+  letter-spacing: -0.14px; */
 }
+
 .form-new__input::-moz-placeholder, .form-new__area::-moz-placeholder {
   font-weight: 400;
   font-size: 14px;
@@ -364,6 +611,7 @@ body {
   color: #94A6BE;
   letter-spacing: -0.14px;
 }
+
 .form-new__input::placeholder, .form-new__area::placeholder {
   font-weight: 400;
   font-size: 14px;
@@ -371,14 +619,17 @@ body {
   color: #94A6BE;
   letter-spacing: -0.14px;
 }
+
 .form-new__input {
   margin: 20px 0;
 }
+
 .form-new__area {
   max-width: 370px;
   margin-top: 14px;
   height: 200px;
 }
+
 .form-new__create {
   /* width: 132px;
   height: 30px;
@@ -394,40 +645,47 @@ body {
 }
 
 .subttl {
-  color: #000;
+  /* color: #000;
   font-size: 14px;
   font-weight: 600;
-  line-height: 1;
+  line-height: 1; */
 }
 
 .calendar {
-  width: 182px;
-  margin-bottom: 20px;
+  /* width: 182px;
+  margin-bottom: 20px; */
 }
+
 .calendar__ttl {
-  margin-bottom: 14px;
-  padding: 0 7px;
+  /* margin-bottom: 14px;
+  padding: 0 7px; */
 }
+
 .calendar__p {
   color: #94A6BE;
   font-size: 10px;
   line-height: 1;
 }
+
 .calendar__p span {
   color: #000000;
 }
+
 .calendar__block {
-  display: block;
+  /* display: block; */
 }
+
 .calendar__month {
   color: #94A6BE;
   font-size: 14px;
   line-height: 25px;
   font-weight: 600;
 }
+
 .calendar__content {
-  margin-bottom: 12px;
+  /* margin-bottom: 12px; */
 }
+
 .calendar__days-names {
   display: flex;
   flex-wrap: nowrap;
@@ -436,6 +694,7 @@ body {
   margin: 7px 0;
   padding: 0 7px;
 }
+
 .calendar__day-name {
   color: #94A6BE;
   font-size: 10px;
@@ -443,12 +702,14 @@ body {
   line-height: normal;
   letter-spacing: -0.2px;
 }
+
 .calendar__cells {
   width: 182px;
   height: 126px;
   display: flex;
   flex-wrap: wrap;
 }
+
 .calendar__cell {
   width: 22px;
   height: 22px;
@@ -464,6 +725,7 @@ body {
   letter-spacing: -0.2px;
   cursor: pointer;
 }
+
 .calendar__nav {
   width: 100%;
   display: flex;
@@ -472,6 +734,7 @@ body {
   margin-top: 14px;
   padding: 0 7px;
 }
+
 .calendar__period {
   padding: 0 7px;
 }
@@ -481,6 +744,7 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+
 .nav__action {
   width: 18px;
   height: 25px;
@@ -489,6 +753,7 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 .nav__action svg {
   fill: #94A6BE;
 }
@@ -512,35 +777,38 @@ body {
 }
 
 .categories {
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
+
 .categories__themes {
-  display: flex;
+  /* display: flex;
   flex-wrap: nowrap;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: flex-start; */
 }
-.categories__p {
+
+/* .categories__p {
   margin-bottom: 14px;
-}
+} */
 .categories__theme {
-  display: inline-block;
+  /* display: inline-block;
   width: auto;
   height: 30px;
   padding: 8px 20px;
   border-radius: 24px;
   margin-right: 7px;
-  opacity: 0.4;
+  opacity: 0.4; */
 }
-.categories__theme p {
+
+/* .categories__theme p {
   font-size: 14px;
   font-weight: 600;
   line-height: 14px;
   white-space: nowrap;
-}
+} */
 
 .pop-browse {
-  display: block;
+  /* display: block;
   width: 100%;
   height: 100%;
   min-width: 375px;
@@ -548,10 +816,11 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 7;
+  z-index: 7; */
 }
+
 .pop-browse__container {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   min-height: 100vh;
   padding: 0 16px;
@@ -559,10 +828,11 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.4); */
 }
+
 .pop-browse__block {
-  display: block;
+  /* display: block;
   margin: 0 auto;
   background-color: #FFFFFF;
   max-width: 630px;
@@ -570,66 +840,78 @@ body {
   padding: 40px 30px 38px;
   border-radius: 10px;
   border: 0.7px solid #D4DBE5;
-  position: relative;
+  position: relative; */
 }
+
 .pop-browse__content {
-  display: block;
-  text-align: left;
+  /* display: block;
+  text-align: left; */
 }
+
 .pop-browse__content .categories__theme {
   opacity: 1;
 }
+
 .pop-browse__content .theme-down {
   display: none;
   margin-bottom: 20px;
 }
+
 .pop-browse__content .theme-top {
   display: block;
 }
+
 .pop-browse__top-block {
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 18px;
+  margin-bottom: 18px; */
 }
+
 .pop-browse__ttl {
-  color: #000;
+  /* color: #000;
   font-size: 20px;
   font-weight: 600;
-  line-height: 24px;
+  line-height: 24px; */
 }
+
 .pop-browse__wrap {
-  display: flex;
+  /* display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
+
 .pop-browse__form {
-  max-width: 370px;
+  /* max-width: 370px;
   width: 100%;
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 20px; */
 }
+
 .pop-browse__btn-browse, .pop-browse__btn-edit {
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
+
 .pop-browse__btn-browse button, .pop-browse__btn-edit button {
-  height: 30px;
+  /* height: 30px;
   margin-bottom: 10px;
-  padding: 0 14px;
+  padding: 0 14px; */
 }
+
 .pop-browse__btn-browse .btn-group button, .pop-browse__btn-edit .btn-group button {
-  margin-right: 8px;
+  /* margin-right: 8px; */
 }
 
 .form-browse__block {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
 }
+
 .form-browse__area {
-  max-width: 370px;
+  /* max-width: 370px;
   width: 100%;
   outline: none;
   padding: 14px;
@@ -640,8 +922,9 @@ body {
   line-height: 1;
   letter-spacing: -0.14px;
   margin-top: 14px;
-  height: 200px;
+  height: 200px; */
 }
+
 .form-browse__area::-moz-placeholder {
   font-weight: 400;
   font-size: 14px;
@@ -649,6 +932,7 @@ body {
   color: #94A6BE;
   letter-spacing: -0.14px;
 }
+
 .form-browse__area::placeholder {
   font-weight: 400;
   font-size: 14px;
@@ -658,43 +942,47 @@ body {
 }
 
 .status {
-  margin-bottom: 11px;
+  /* margin-bottom: 11px; */
 }
+
 .status__p {
-  margin-bottom: 14px;
+  /* margin-bottom: 14px; */
 }
+
 .status__themes {
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: flex-start; */
 }
+
 .status__theme {
-  border-radius: 24px;
+  /* border-radius: 24px;
   border: 0.7px solid rgba(148, 166, 190, 0.4);
   color: #94A6BE;
   padding: 11px 14px 10px;
   margin-right: 7px;
-  margin-bottom: 7px;
+  margin-bottom: 7px; */
 }
-.status__theme p {
+
+/* .status__theme p {
   font-size: 14px;
   line-height: 1;
   letter-spacing: -0.14px;
-}
+} */
 
-._btn-bor {
+/* ._btn-bor {
   border-radius: 4px;
   border: 0.7px solid var(--palette-navy-60, #565EEF);
   outline: none;
   background: transparent;
   color: #565EEF;
-}
+} */
 ._btn-bor a {
   color: #565EEF;
 }
 
-._btn-bg {
+/* ._btn-bg {
   border-radius: 4px;
   background: #565EEF;
   border: none;
@@ -703,7 +991,7 @@ body {
 }
 ._btn-bg a {
   color: #FFFFFF;
-}
+} */
 
 ._hide {
   display: none;
@@ -715,7 +1003,7 @@ body {
 
 
 .header__logo img {
-  width: 85px;
+  /* width: 85px; */
 }
 
 
@@ -731,20 +1019,22 @@ body {
   font-weight: 500;
   margin-right: 20px; */
 }
+
 /* .header__btn-main-new a {
   color: #FFFFFF;
 } */
 .header__user {
-  height: 20px;
+  /* height: 20px;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
   font-size: 14px;
   line-height: 20px;
-  color: #565EEF;
+  color: #565EEF; */
 }
-.header__user::after {
+
+/* .header__user::after {
   content: "";
   display: block;
   width: 6px;
@@ -755,7 +1045,7 @@ body {
   transform: rotate(-45deg);
   margin: -6px 0 0 5px;
   padding: 0;
-}
+} */
 .header__pop-user-set {
   /* display: block;
   position: absolute;
@@ -776,11 +1066,13 @@ body {
   /* width: 100%;
   background-color: #EAEEF6; */
 }
+
 .main__block {
   /* width: 100%;
   margin: 0 auto;
   padding: 25px 0 49px; */
 }
+
 .main__content {
   /* width: 100%;
   display: flex; */
@@ -794,6 +1086,7 @@ body {
   padding: 5px 14px;
   border-radius: 18px;
 }
+
 .card__theme p {
   font-size: 10px;
   font-weight: 600;
